--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -6,14 +6,14 @@ menu:
 
 # SubNav
 subnav:
-  github: "#"
-  weibo: "#"
+  github: "https://github.com/"
+  # weibo: "#"
   rss: "#"
-  zhihu: "#"
+  # zhihu: "#"
   #qq: "#"
   #weixin: "#"
   #jianshu: "#"
-  #douban: "#"
+  douban: "https://www.douban.com/"
   #segmentfault: "#"
   #bilibili: "#"
   #acfun: "#"
@@ -43,7 +43,7 @@ open_in_new: false
 
 # 打赏
 # 打赏type设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
-reward_type: 2
+reward_type: 0
 # 打赏wording
 reward_wording: "谢谢你请我吃糖果"
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
@@ -68,7 +68,7 @@ google_analytics: ""
 favicon: /favicon.png
 
 #你的头像url
-avatar:
+avatar: ""
 
 #是否开启分享
 share_jia: true
@@ -81,7 +81,7 @@ share_jia: true
 duoshuo: false
 
 #2、网易云跟帖
-wangyiyun: false
+wangyiyun: true
 
 #3、畅言
 changyan_appid: false
@@ -115,16 +115,11 @@ slider:
 #smart_menu:
 #  friends: false
 smart_menu:
-  innerArchive: "所有文章"
-  friends: "友链"
+  innerArchive: "ALL"
+  friends: "OTHERS"
   aboutme: "ABOUT ME"
 
 friends:
   友情链接1: http://localhost:4000/
-  友情链接2: http://localhost:4000/
-  友情链接3: http://localhost:4000/
-  友情链接4: http://localhost:4000/
-  友情链接5: http://localhost:4000/
-  友情链接6: http://localhost:4000/
 
 aboutme: 从放纵与坚守中所透露出的永远是<br>最真的本性。
