--- a/_config.yml
+++ b/_config.yml
@@ -106,3 +106,22 @@ deploy:
   type: git
   repo: https://github.com/LBjadehare/LBjadehare.github.io
   branch: master
+
+jsonContent:
+  meta: false
+  pages: false
+  posts:
+    title: true
+    date: true
+    path: true
+    text: false
+    raw: false
+    content: false
+    slug: false
+    updated: false
+    comments: false
+    link: false
+    permalink: false
+    excerpt: false
+    categories: false
+    tags: true
